Repair bug with overflow:hidden on mobile version

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
 * {
     margin: 0;
     padding: 0;
+}
+html,
+body {
     overflow: hidden;
+    position: relative;
+    height: 100%;
 }
 a {
     text-decoration: none;
